Fix hunt image field padding alignment

--- a/wp-content/themes/chassesautresor/assets/scss/_chasse.scss
+++ b/wp-content/themes/chassesautresor/assets/scss/_chasse.scss
@@ -37,7 +37,7 @@
 /* ========== 🖼️ COLONNE IMAGE DE LA CHASSE ========== */
 .champ-chasse.champ-img {
   flex: 0 0 auto;
-  padding: var(--space-xs);
+  padding: 0;
   width: fit-content;
   max-width: 100%;
   margin: 0 auto;
